Add '25w44a' sources